feat: add loading and transition animations

--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     </button>
 </div>
 
-<script src="asset/js/script.js"></script>
+<script src="asset/js/script.js" defer ></script>
 </body>
 </html>
